--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -1,3 +1,35 @@
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Irma Text Light';
+}
+p, div {
+    font-family: 'Irma Text Light';
+}
+
 body {
   padding-top: 60px; /* 60px to make the container make room for the navigation bar */
+}
+
+.editorText {	
+  padding: 1em;
+}
+
+input.editorCheckbox {	
+  margin: 7px;
+}
+select.editorDropdown {	
+  margin-left: 7px;
+}
+button.back{
+  margin: 1em;
+  float:right;
+}
+span.brand{
+  color:white;
+  font-size:20px;
+}
+div.container,title{
+margin-top:10px;
+}
+tr.supervised {
+	text-decoration: line-through;
 }
