some css added, changed the url, parsed to a new part of the document 'manual'

--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -33,3 +33,12 @@ margin-top:10px;
 tr.supervised {
 	text-decoration: line-through;
 }
+span.checkbox {
+  width:275px;
+}
+span.input-text{
+  width:120px;
+}
+input.form-control.js-input-text {
+  width:350px;
+}
